# gmail-to-sqlite

./: .flake8  .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml
.github/codeql/extensions/gmail-to-sqlite-python/: codeql-pack.yml
.kiro/specs/email-stats-dashboard/: .config.kiro
.kiro/specs/gmail-web-viewer/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/message-html-view/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/missing-db-ux/: .config.kiro  bugfix.md  design.md  tasks.md
.kiro/specs/modern-sleek-ui/: design.md  requirements.md  tasks.md
.kiro/specs/raw-body-storage/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/raw-message-source/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/sync-button-dropdown/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/to-field-object-display/: .config.kiro  bugfix.md  design.md  tasks.md
gmail_to_sqlite/: auth.py  constants.py  db.py  main.py  message.py  migrations.py  sync.py
gmail_to_sqlite/schema_migrations/: v2_add_body_html_column.py  v3_create_attachments_table.py  v4_add_content_id_column.py
tests/: conftest.py  test_api_messages.py  test_db.py  test_message.py  test_migrations.py  test_raw_body_storage_properties.py  test_raw_message_source_properties.py  test_sync.py
web/: README.md  db.py  requirements-dev.txt  server.py
web/api/: __init__.py  labels.py  messages.py  sync.py
web/static/: api.js  app.js  attachments.js  commandPalette.js  filters.js  index.html  logConsole.js  messageDetail.js  messageList.js  paneResizer.js  readingPane.js  sidebar.js  style.css  themeManager.js  toastManager.js
web/tests/: test_bug_condition.py  test_messageDetail.test.js  test_messageList.test.js  test_preservation_properties.py  test_raw_body_storage_web_properties.py  test_recipient_formatting.py  test_sync_frontend_properties.test.js  test_web_labels.py  test_web_messages.py  test_web_properties.py  test_web_sync.py
webv2/: requirements-dev.txt
webv2/api/: labels.py  sync.py
webv2/static/: api.js  filters.js  messageDetail.js  messageList.js  style.css
webv2/tests/: test_messageDetail.test.js  test_message_html_view.py  test_message_html_view_properties.py  test_raw_body_storage_web_properties.py  test_sync_properties.py  test_web_messages.py  test_web_properties.py
