[project]
name = "gmail-to-sqlite"
version = "0.2.0"
description = "A robust Python application that syncs Gmail messages to a local SQLite database for analysis and archival purposes."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["gmail", "sqlite", "email", "sync", "backup", "archive"]

dependencies = [
    "beautifulsoup4>=4.13.3",
    "google-api-python-client>=2.164.0",
    "google-auth>=2.38.0",
    "google-auth-oauthlib>=1.2.1",
    "google-auth-httplib2>=0.2.0",
    "peewee>=3.17.9",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "flake8>=7.1.2",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pre-commit>=4.1.0",
]

[project.urls]
"Homepage" = "https://github.com/marcboeker/gmail-to-sqlite"
"Bug Tracker" = "https://github.com/marcboeker/gmail-to-sqlite/issues"
"Documentation" = "https://github.com/marcboeker/gmail-to-sqlite#readme"
"Source Code" = "https://github.com/marcboeker/gmail-to-sqlite"

[project.scripts]
gmail-to-sqlite = "gmail_to_sqlite.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gmail_to_sqlite"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | __pycache__
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "--disable-warnings", "-v"]

[tool.coverage.run]
source = ["gmail_to_sqlite"]
omit = ["tests/*", "venv/*", ".venv/*", "*/site-packages/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
